2006-09-19  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py
	(ComponentHeaven._startComponent): Until the network map is
	implemented, hack to allow intra-worker connections behind a
	firewall to work.

2006-09-19  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/http.xml:
	  burst-time property for http-streamer.
	  Allows time-based bursting, if multifdsink fully supports it
	  (currently requires patches).
	  Some refactoring for clarity. No behaviour changes by default.
	  Fixes #462

2006-09-18  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/httpfile.py:
	  Fix cortado problems due to porter redirections and persistent
	  connections.

2006-09-18  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/muxers/checks.py:
	* flumotion/worker/checks/encoder.py:
	* flumotion/worker/checks/video010.py:
	Fix checks to use get_plugin_version correctly.

2006-09-18  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/gstreamer.py:
	Actually make get_plugin_version return a tuple of integers
	not strings.

2006-09-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/manager/manager.py:
	Fix comment parameter ordering.

2006-09-14  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/http.xml:
	  Add burst-size property, in kB.
	  When set, use this to configure streamers using new multifdsink
	  burst modes.

2006-09-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/gstreamer.py:
	Make get_plugin_version return a tuple not a string.  Make nano
	non-optional in the return value.
	* flumotion/component/feedcomponent010.py:
	Use fixed get_plugin_version.
	* flumotion/component/muxers/checks.py:
	Use fixed get_plugin_version.
	* flumotion/worker/checks/encoder.py: